--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
     "pm2": "^5.3.0",
+    "react-router-dom": "^6.11.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
