--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "gapstock_back",
+  "name": "guardian_back",
   "version": "1.0.0",
-  "description": "",
+  "description": "backend for guardian app",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "prod": "pm2 start src/index.js"
+    "prod": "pm2 start src/index.js",
+    "migrate:up": "npx sequelize-cli db:migrate",
+    "migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "migrate:undo:all": "npx sequelize-cli db:migrate:undo:all",
+    "seed": "npx sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "Raul Belloso M",
@@ -18,10 +22,11 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
-    "mysql2": "^3.2.0",
+    "mysql2": "^3.3.3",
     "nodemailer": "^6.9.1",
     "pm2": "^5.3.0",
     "react-router-dom": "^6.11.2",
+    "sequelize": "^6.32.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
