--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "nodemailer": "^6.9.1",
+    "normalize-diacritics": "^4.0.3",
     "ping": "^0.4.4",
     "pm2": "^5.3.0",
     "sequelize": "^6.32.0",
